add game websocket and updated GameManager